--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,33 @@
-﻿/* Top Menu Bar */
+﻿*{
+    box-sizing: border-box;
+    transition: all ease-in-out 200ms;
+}
+
+
+
+/* Top Menu Bar */
 .navbar {
     overflow: hidden;
-    background-color: #1a1a1a;
+    background-color: #4d4d4d;
     font-family: Trebuchet MS;
     position: fixed;
+    color: white;
     left: 0;
     top: 0;
     width: 100%;
 }
 
+@media (min-width: 60rem){
+	.navbar {
+	    overflow: hidden;
+	    width: 100%;
+	}
+}
+
 .navbar .button {
     float: right;
     position: relative;
-    right: 80px;
+    right: 8%;
     top: 17px;
     font-size: 15px;
     color: white;
@@ -23,19 +38,30 @@
 }
 
 .navbar .button point{
-    background-color: #CCCCDD;
+    background-color: #666666;
 }
 
 .navbar .logo {
     float: left;
     position: relative;
-    left: 100px;
+    left: 9%;
+    text-decoration: none; 
+    font-family:'Montserrat',sans-serif;
+    padding: 0px;
+    font-size: 25pt;
+    color: #f2f2f2;
 }
+
+.navbar .logo :hover{
+	color: #b3b3ff;
+	transition: 0.05s;
+}
+
 
 .dropdown {
     float: right;
     position: relative;
-    right: 80px;
+    right: 8%;
     top: 17px;
     overflow: hidden;
 }
@@ -46,19 +72,19 @@
     outline: none;
     color: white;
     padding: 15px 15px 15px 15px;
-    background-color: #1a1a1a;
+    background-color: #4d4d4d;
     font-family: inherit;
     margin: 0;
 }
 
 .button:hover, .dropbtn:hover {
-    background-color: #CCCCDD;
+    background-color: #666666;
 }
 
 .dropdown-content {
     display: none;
     position: fixed;
-    background-color: #f9f9f9;
+    background-color: #595959;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -66,7 +92,7 @@
 
 .dropdown-content a {
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -74,7 +100,12 @@
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #737373;
+    color: white;
+}
+
+.dropdown-content a:hover .dropbtn {
+    background-color: #666666;
 }
 
 .dropdown:hover .dropdown-content {
@@ -157,6 +188,7 @@ form.example::after {
     display: table;
 }
 */
+
 /* Social Media Icons */
 .socialmedia{
     display: inline-block;
@@ -178,12 +210,13 @@ form.example::after {
     margin:1.6667%;
     position: relative;
     width: 30%;
-    height: 55%;
+    height: 30%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .item img{
     display: block;
+    overflow: hidden;
 }
 
 .desc{
@@ -204,22 +237,57 @@ form.example::after {
 
 @media (min-width: 37rem){
     .item{
-	width:50%;
-	float:left;
+		width:50%;
+		float:left;
+		overflow: hidden;
+    }
+
+    .desc{
+    	width:100%;
+		transform: translateY(150%);
+    }
+
+    .item:hover .desc{
+		transform: translateY(0%);
     }
 }
 
 @media (min-width: 60rem){
     .item{
-	width:30%;
-	overflow: hidden;
+		width:30%;
+		overflow: hidden;
     }
 
     .desc{
-	transform: translateY(150%);
+    	width:100%;
+		transform: translateY(150%);
     }
 
     .item:hover .desc{
-	transform: translateY(0%);
+		transform: translateY(0%);
     }
+}
+
+
+/* Table of Contents */
+
+#toc_container {
+    background: #f9f9f9 none repeat scroll 0 0;
+    border: 1px solid #aaa;
+    display: table;
+    font-size: 95%;
+    margin-bottom: 1em;
+    padding: 20px;
+    margin: 20px;
+    width: auto;
+    float: right;
+}
+
+.toc_title {
+    font-weight: 700;
+    text-align: center;
+}
+
+#toc_container li, #toc_container ul, #toc_container ul li{
+    list-style: outside none none !important;
 }
