--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 .navbar {
     overflow: hidden;
     background-color: #4d4d4d;
-    font-family: Open Sans, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     position: fixed;
     color: white;
     left: 0;
