--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,9 @@ form.example::after {
 }
 
 .socialmedia a:hover {
-    box-shadow: 0 0 2px 2px rgba(0, 140, 186, 0.5);
+ 	-webkit-box-shadow: 0px 0px 30px 0px rgba(0, 140, 186, 0.5);
+	-moz-box-shadow: 0px 0px 30px 0px rgba(0, 140, 186, 0.5);
+	box-shadow: 0px 0px 30px 0px rgba(0, 140, 186, 0.5);
 }
 
 
