--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     left: 0;
     top: 0;
     width: 100%;
+    min-width: 600px;
 }
 
 @media (min-width: 550px){
@@ -118,6 +119,7 @@ body {
     background-size: cover;
     font-family: Open Sans, sans-serif;
     color: black;
+    min-width: 600px;
 }
 
 p {
