--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
     font-family: 'Montserrat', sans-serif;
     padding: 0px;
     font-size: 19pt;
-    color: #ccccff;
+    color: #dddddd;
 }
 
 .navbar .logo :hover{
@@ -158,11 +158,12 @@ a:hover {
     border: 5px groove white;
 }
 .box-img{
-    border-radius: 50%;
+    border-radius: 5%;
     max-width: 100%;
     max-height: 100%;
     width: 300px;
     height: auto;
+    margin-top: 40px;
 }
 .box h1{
     font-size: 40px;
