--- a/styles.css
+++ b/styles.css
@@ -248,44 +248,6 @@ a:hover {
 }
 
 
-/* Search Bar in Footer */
-/*
-* {
-    box-sizing: border-box;
-}
-
-form.example input[type=text] {
-    padding: 10px;
-    font-size: 15px;
-    border: 1px solid grey;
-    float: left;
-    width: 80%;
-    background: #f1f1f1;
-}
-
-form.example button {
-    float: left;
-    width: 20%;
-    padding: 10px;
-    background: #66686b;
-    color: white;
-    font-size: 15px;
-    border: 1px solid grey;
-    border-left: none;
-    cursor: pointer;
-}
-
-form.example button:hover {
-    background: #8b8e93;
-}
-
-form.example::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-*/
-
 /* Social Media Icons */
 .socialmedia{
     display: inline-block;
@@ -296,11 +258,15 @@ form.example::after {
     margin: 5px;
 }
 
-.socialmedia a:hover {
+.socialmedia a i{
+    font-size: 30px;
+}
+
+/* .socialmedia a:hover {
     -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 140, 186, 0.5);
     -moz-box-shadow: 0px 0px 30px 0px rgba(0, 140, 186, 0.5);
     box-shadow: 0px 0px 30px 0px rgba(0, 140, 186, 0.5);
-}
+} */
 
 
 /* Portfolio Clickable Images with Pop up */
@@ -410,7 +376,3 @@ form.example::after {
 #toc_container li, #toc_container ul, #toc_container ul li{
     list-style: outside none none !important;
 }
-
-
-
-
