--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ a:hover {
     color: white;
     text-decoration: none;
     font-size: 60px;
-    transition: all ease-in-out 50ms;
+    transition: all ease-in-out 20ms;
 }
 .box li a:hover{
     color: #b9b9b9;
@@ -260,6 +260,11 @@ a:hover {
 
 .socialmedia a i{
     font-size: 30px;
+    color: #cccccc;
+    transition: all ease-in-out 20ms;
+}
+.socialmedia a i:hover{
+    color: #aaaaaa;
 }
 
 /* .socialmedia a:hover {
