--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 ﻿*{
     box-sizing: border-box;
-    transition: all ease-in-out 200ms;
+    transition: all ease-in-out 2s;
 }
 
 
@@ -203,7 +203,7 @@ a:hover {
     color: white;
     text-decoration: none;
     font-size: 60px;
-    transition: all ease-in-out 20ms;
+    transition: all ease-in-out 0.1s;
 }
 .box li a:hover{
     color: #b9b9b9;
@@ -261,7 +261,7 @@ a:hover {
 .socialmedia a i{
     font-size: 30px;
     color: #cccccc;
-    transition: all ease-in-out 20ms;
+    transition: all ease-in-out 0.1s;
 }
 .socialmedia a i:hover{
     color: #aaaaaa;
@@ -290,7 +290,7 @@ a:hover {
     color: white; 
     background: rgba(0,0,0,0.6);
     padding-bottom: 10px;
-    transition: .3s ease;
+    transition: 0.3s ease;
 }
 
 .desc p{
@@ -308,7 +308,7 @@ a:hover {
     }
 
     .desc{
-    	width:100%;
+    	width: 100%;
 	    transform: translateY(150%);
     }
 
