--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Open Sans, sans-serif;
-    color: black;
     min-width: 600px;
     width: 100%;
 }
@@ -143,7 +142,7 @@ a {
 }
 
 a:hover {
-    color: #ffbfbf;
+    color: #4A4A4A;
     text-decoration: none;
 }
 
