change background colour

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ body {
     font-family: Open Sans, sans-serif;
     min-width: 600px;
     width: 100%;
+    color: inherit;
 }
 
 p {
@@ -142,7 +143,7 @@ a {
 }
 
 a:hover {
-    color: #4A4A4A;
+    color: #333333;
     text-decoration: none;
 }
 
