--- a/styles2.css
+++ b/styles2.css
@@ -1,60 +1,12 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    font-family: Arial, sans-serif;
-    background-color: #1a3a3a;
-    color: white;
-}
-
-header {
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 1rem;
-    font-size: 18px;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background-color: #1a2639;
+    color: #d4d4dc;
+    animation: fadeIn 1s ease-in;
+    transition: background-color 0.3s ease;
 }
 
 .logo {
     font-weight: bold;
-}
-
-nav ul {
-    display: flex;
-    list-style-type: none;
-}
-
-nav ul li {
-    margin-right: 3rem;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    position: relative;
-}
-
-nav ul li a::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #00ffdd;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-}
-
-nav ul li a:hover::after {
-    width: 100%;
 }
 
 #hero {
@@ -64,7 +16,6 @@ nav ul li a:hover::after {
     justify-content: center;
     height: 100vh;
     text-align: center;
-    position: relative;
     padding-bottom: 60px;  
 }
 
@@ -277,4 +228,43 @@ h2, h3, h4 {
 #skillicon:hover {
     color:#FFFFFF; 
     transition: opacity 0.1s;
+}
+
+p a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #84a9ac;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-out;
+}
+
+a {
+    text-decoration: none;
+    color: #84a9ac;
+    transition: color 0.3s ease;
+    position: relative;
+}
+
+a:hover {
+    color: #e8e8e8;
+}
+
+a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #84a9ac;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-out;
+}
+
+a:hover::after {
+    transform: scaleX(1);
 }
